Fixed alignment

--- a/src/main/resources/ui/lobby/create_game/createGame.css
+++ b/src/main/resources/ui/lobby/create_game/createGame.css
@@ -1,3 +1,7 @@
+* {
+    -fx-border-radius: 0;
+}
+
 .createGame {
     -fx-pref-width: 350;
     -fx-pref-height: 300;
@@ -10,6 +14,7 @@
     -fx-text-fill: white;
     -fx-font-size: 26;
     -fx-font-weight: bold;
+    -fx-text-alignment: center;
 }
 
 .text-field {
@@ -25,8 +30,8 @@
 
 .toggle-button {
     -fx-border-width: 0;
+    -fx-background-radius: 0;
     -fx-background-color: -primary-background-color;
-    -fx-border-radius: 0;
     -fx-font-weight: bold;
     -fx-font-size: 16;
     -fx-text-fill: -on-primary-fill;
